--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "fuse.js": "^3.4.5",
     "isomorphic-fetch": "^2.2.1",
     "next": "^8.1.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
+    "react-debounce-input": "^3.2.0",
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
     "@types/next": "^8.0.5",
     "@types/react": "^16.8.17",
