--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "start": "cross-env NODE_ENV=production node dist/index.js"
   },
   "dependencies": {
-    "bootstrap": "^4.3.1",
+    "@material-ui/core": "^4.0.0-rc.0",
+    "@zeit/next-sass": "^1.0.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "fuse.js": "^3.4.5",
     "isomorphic-fetch": "^2.2.1",
     "next": "^8.1.0",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.9",
     "react-debounce-input": "^3.2.0",
     "react-dom": "^16.8.6"
   },
