--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.0.0-rc.0",
+    "@material-ui/icons": "^4.1.0",
     "@zeit/next-sass": "^1.0.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "fuse.js": "^3.4.5",
     "isomorphic-fetch": "^2.2.1",
     "next": "^8.1.0",
+    "next-images": "^1.1.1",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-debounce-input": "^3.2.0",
