--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "fuse.js": "^3.4.5",
     "isomorphic-fetch": "^2.2.1",
+    "jikants": "^1.2.8",
     "next": "^8.1.0",
     "next-images": "^1.1.1",
     "node-sass": "^4.12.0",
