--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -9,5 +9,5 @@
     "isolatedModules": false,
     "noEmit": false
   },
-  "include": ["server/**/*.ts"]
+  "include": ["server/**/*.ts", "server/**/*.d.ts"]
 }
