--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "custom-server-typescript",
   "version": "1.0.0",
+  "typings": "./shared/types.d.ts",
   "scripts": {
     "dev": "nodemon server/index.ts",
     "build": "next build && tsc --project tsconfig.server.json",
@@ -20,13 +21,20 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-debounce-input": "^3.2.0",
+    "react-dnd": "^7.6.0",
+    "react-dnd-html5-backend": "^7.6.0",
+    "react-dnd-multi-backend": "^3.2.1",
+    "react-dnd-touch-backend": "^0.8.3",
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
     "@types/next": "^8.0.5",
-    "@types/react": "^16.8.17",
+    "@types/node": "^12.0.7",
+    "@types/react": "^16.8.19",
+    "@types/react-dnd-html5-backend": "^3.0.2",
+    "@types/react-dnd-multi-backend": "^3.0.5",
     "@types/react-dom": "16.8.4",
     "@zeit/next-typescript": "^1.1.1",
     "cross-env": "^5.2.0",
