--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,15 @@
     "isolatedModules": true,
     "removeComments": false,
     "preserveConstEnums": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "typeRoots": [
+      "./shared"
+    ]
   },
+  "include": [
+    "./shared/types.d.ts",
+    "globals.d.ts",
+    "node_modules/@types/node/globals.d.ts"
+  ],
   "exclude": ["dist", ".next", "out", "next.config.js"]
 }
