--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jikants": "^1.2.8",
     "next": "^8.1.0",
     "next-images": "^1.1.1",
+    "next-offline": "^4.0.2",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-debounce-input": "^3.2.0",
