--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jikants": "^1.2.8",
     "next": "^8.1.0",
+    "next-ga": "^2.3.4",
     "next-images": "^1.1.1",
     "next-offline": "^4.0.2",
     "node-sass": "^4.12.0",
@@ -26,7 +27,8 @@
     "react-dnd-html5-backend": "^7.6.0",
     "react-dnd-multi-backend": "^3.2.1",
     "react-dnd-touch-backend": "^0.8.3",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-github-corner": "^2.3.0"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
