save now working

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 WAIFU_TIERLIST_URL=http://localhost:3000
+WAIFU_TIERLIST_MONGODB_URL=your-cute-database-here
+# TIP: use mongodb atlas, it's free
+# https://www.mongodb.com/cloud/atlas
