--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "typings": "./shared/types.d.ts",
   "scripts": {
-    "dev": "nodemon server/index.ts",
+    "dev": "nodemon",
     "build": "next build && tsc --project tsconfig.server.json",
     "start": "cross-env NODE_ENV=production node dist/server/index.js"
   },
@@ -16,29 +16,36 @@
     "fuse.js": "^3.4.5",
     "isomorphic-fetch": "^2.2.1",
     "jikants": "^1.2.8",
+    "mongoose": "^5.5.15",
     "next": "^8.1.0",
     "next-ga": "^2.3.4",
     "next-images": "^1.1.1",
     "next-offline": "^4.0.2",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-debounce-input": "^3.2.0",
     "react-dnd": "^7.6.0",
     "react-dnd-html5-backend": "^7.6.0",
     "react-dnd-multi-backend": "^3.2.1",
     "react-dnd-touch-backend": "^0.8.3",
     "react-dom": "^16.8.6",
-    "react-github-corner": "^2.3.0"
+    "react-github-corner": "^2.3.0",
+    "shortid": "^2.2.14"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
+    "@types/mongodb": "^3.1.28",
+    "@types/mongoose": "^5.5.6",
     "@types/next": "^8.0.5",
     "@types/node": "^12.0.7",
     "@types/react": "^16.8.19",
+    "@types/react-copy-to-clipboard": "^4.2.6",
     "@types/react-dnd-html5-backend": "^3.0.2",
     "@types/react-dnd-multi-backend": "^3.0.5",
     "@types/react-dom": "16.8.4",
+    "@types/shortid": "0.0.29",
     "@zeit/next-typescript": "^1.1.1",
     "cross-env": "^5.2.0",
     "nodemon": "^1.19.0",
