--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-offline": "^4.0.2",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-beautiful-dnd": "^11.0.4",
     "react-copy-to-clipboard": "^5.0.1",
     "react-debounce-input": "^3.2.0",
     "react-dnd": "^7.6.0",
@@ -39,7 +40,7 @@
     "@types/mongodb": "^3.1.28",
     "@types/mongoose": "^5.5.6",
     "@types/next": "^8.0.5",
-    "@types/node": "^12.0.7",
+    "@types/node": "^12.0.8",
     "@types/react": "^16.8.19",
     "@types/react-copy-to-clipboard": "^4.2.6",
     "@types/react-dnd-html5-backend": "^3.0.2",
