--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "fuse.js": "^3.4.5",
+    "hammerjs": "^2.0.8",
     "isomorphic-fetch": "^2.2.1",
     "jikants": "^1.2.8",
     "mongoose": "^5.5.15",
+    "muuri": "^0.7.1",
     "next": "^8.1.0",
     "next-ga": "^2.3.4",
     "next-images": "^1.1.1",
@@ -24,9 +26,9 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-beautiful-dnd": "^11.0.4",
+    "react-beautiful-dnd-grid": "^0.1.3-alpha",
     "react-copy-to-clipboard": "^5.0.1",
     "react-debounce-input": "^3.2.0",
-    "react-dnd": "^7.6.0",
     "react-dnd-html5-backend": "^7.6.0",
     "react-dnd-multi-backend": "^3.2.1",
     "react-dnd-touch-backend": "^0.8.3",
@@ -42,6 +44,7 @@
     "@types/next": "^8.0.5",
     "@types/node": "^12.0.8",
     "@types/react": "^16.8.19",
+    "@types/react-beautiful-dnd": "^11.0.2",
     "@types/react-copy-to-clipboard": "^4.2.6",
     "@types/react-dnd-html5-backend": "^3.0.2",
     "@types/react-dnd-multi-backend": "^3.0.5",
