--- a/static/manifest.json
+++ b/static/manifest.json
@@ -3,7 +3,7 @@
   "name": "Waifu Tierlist",
   "start_url": "/",
   "background_color": "#3F51B5",
-  "theme_color": "#b748b5",
+  "theme_color": "#2196f3",
   "display": "standalone",
   "icons": [
     {
