--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.0.0-rc.0",
     "@material-ui/icons": "^4.1.0",
+    "@next/bundle-analyzer": "^8.1.0",
     "@zeit/next-sass": "^1.0.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
@@ -17,6 +18,7 @@
     "hammerjs": "^2.0.8",
     "isomorphic-fetch": "^2.2.1",
     "jikants": "^1.2.8",
+    "lodash": "^4.17.11",
     "mongoose": "^5.5.15",
     "muuri": "^0.7.1",
     "next": "^8.1.0",
@@ -26,7 +28,6 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-debounce-input": "^3.2.0",
     "react-dom": "^16.8.6",
     "react-github-corner": "^2.3.0",
     "shortid": "^2.2.14"
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
+    "@types/lodash": "^4.14.134",
     "@types/mongodb": "^3.1.28",
     "@types/mongoose": "^5.5.6",
     "@types/next": "^8.0.5",
